--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -53,6 +53,7 @@ form button:hover {
   background: white;
   font-size: 1.5rem;
   color: black;
+  height: 72px;
   display: flex;
   justify-content: space-between;
   align-items: center;
