--- a/app/views/task/index.html.erb
+++ b/app/views/task/index.html.erb
@@ -9,148 +9,7 @@
       rel="stylesheet"
     />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-    * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  color: white;
-  font-family: "Poppins", sans-serif;
-  min-height: 100vh;
-}
-header {
-  font-size: 2rem;
-}
-
-header,
-form {
-  min-height: 20vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-form input,
-form button {
-  padding: 0.5rem;
-  font-size: 2rem;
-  border: none;
-  background: white;
-}
-form button {
-  color: #ff6f47;
-  background: #f7fffe;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-form button:hover {
-  background: #ff6f47;
-  color: white;
-}
-.todo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.todo-list {
-  min-width: 30%;
-  list-style: none;
-}
-
-.todo {
-  margin: 0.5rem;
-  background: white;
-  font-size: 1.5rem;
-  color: black;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: all 1s ease;
-}
-.filter-todo {
-  padding: 1rem;
-}
-.todo li {
-  flex: 1;
-}
-
-.trash-btn,
-.complete-btn {
-  background: #ff6f47;
-  color: white;
-  border: none;
-  padding: 1rem;
-  cursor: pointer;
-  font-size: 1rem;
-}
-.complete-btn {
-  background: rgb(11, 212, 162);
-}
-.todo-item {
-  padding: 0rem 0.5rem;
-}
-
-.fa-trash,
-.fa-check {
-  pointer-events: none;
-}
-
-.fall {
-  transform: translateY(10rem) rotateZ(20deg);
-  opacity: 0;
-}
-
-.completed {
-  text-decoration: line-through;
-  opacity: 0.5;
-}
-
-/*CUSTOM SELECTOR */
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  background-image: none;
-}
-
-/* Custom Select */
-.select {
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-}
-select {
-  color: #ff6f47;
-  font-family: "Poppins", sans-serif;
-  cursor: pointer;
-  width: 12rem;
-}
-/* Arrow */
-.select::after {
-  content: "\25BC";
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 1rem;
-  background: #ff6f47;
-  cursor: pointer;
-  pointer-events: none;
-}
-/* Transition */
-/*
-.select:hover::after {
-  transform: scale(1.5);
-}
-*/
-
-    </style>
+   
   </head>
   <body>
     <header>
@@ -160,60 +19,79 @@ select {
     </header>
     <br>
      <h2 style="text-align:center;">Total todos <%=Task.count%></h2>
-    <form>
+    <form action="/todoscreate" method="post">
    
-    <br>
-      <input type="text" class="todo-input" />
+    
+      <input type="text" class="todo-input" name="todo_name"/>
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
-      <div class="select">
-      <%= form_tag('/handle_selection', method: 'post') do %>
-        <select name="todos" class="filter-todo">
-          <option value="all">All</option>
-          <option value="completed">Completed</option>
-          <option value="uncompleted">Uncompleted</option>
-          
-        </select>
-       
-      </div>
-          <%= submit_tag 'Submit' %>
-      <% end %>
-    </form>
-    <%
-     
-     @task.each do |single| %>
+      </form>
+      <form action="/todos/handle_selection" method="get" id="filterForm">
+  <div class="select">
+    <select name="selected_value" class="filter-todo" id="selectedValue" onchange="submitForm()">
+      <option value="all">All</option>
+      <option value="completed">Completed</option>
+      <option value="uncompleted">Uncompleted</option>
+    </select>
+  </div>
+  <button type="submit">Submit</button>
+</form>
+    <%@task.each do |single| %>
       <div class="todo-container">
       <ul class="todo-list">
       <div class="todo">
       <li class="todo-item"><%= single.name%></li>
       <li class="todo-item"><%= single.viewtask%></li>
+
+
+      <form action="/todos/editstatus" method="post">
+      <input type="hidden" name="_method" value="put">
+      <input type="hidden" name="id" value="<%= single.id %>">
+      
+      <button class="complete-btn" type="submit">
       <%
       if single.status==false %>
-        <button class="complete-btn">
+      <input type="hidden" name="status" value=true>
           <i class="fas fa-check"></i>
-      
-      </button>
-        <% else %>
-        
-      <button class="complete-btn">
-     
+      <% else %>
+      <input type="hidden" name="status" value=false>
        <i class="fas fa-circle-xmark"></i>
-      </button>
       <% end %>
-     
-      
-      <button class="trash-btn">
-      <i class="fas fa-trash"></i>
-      </button>
+     </button>
+     </form>
+
+
+    <form action="/todos/delete" method="post" id="delform">
+    <input type="hidden" name="_method" value="delete">
+    <input type="hidden" name="id" value="<%= single.id %>">
+    <button class="trash-btn" type="submit">
+    <i class="fas fa-trash"></i>
+   </button>
+</form>
+
       </div>
       </ul>
     </div>
      <% end %>
      
-   
-    
-
-  
   </body>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var selectedValueInput = document.getElementById('selectedValue');
+    var storedValue = localStorage.getItem('selectedValue');
+
+    if (storedValue) {
+      selectedValueInput.value = storedValue;
+    }
+  });
+
+  function submitForm() {
+    var selectedValueInput = document.getElementById('selectedValue');
+    localStorage.setItem('selectedValue', selectedValueInput.value);
+    document.getElementById('filterForm').submit();
+  }
+</script>
+
 </html>
